update load file

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,6 +26,7 @@
     </div>
   </nav>
  -->
+  <input type="file" id="files" name="files[]" (change)="handleFileSelect($event)" />
   <!-- gs-viewer demo -->
   <gs-viewer [data]="gs_dummy_data"></gs-viewer>
 
