--- a/src/app/gs-viewer/viewer/viewer.component.html
+++ b/src/app/gs-viewer/viewer/viewer.component.html
@@ -2,8 +2,8 @@
     (mousemove)="onDocumentMouseMove($event)" 
     (mousedown)="mousedown($event)"
     (mouseup)="mouseup($event)"
-		(click)="onDocumentMouseDown($event)"
-    (window:resize)="onResize($event)">
+		(click)="onDocumentMouseDown($event)">
+    <!-- (window:resize)="onResize($event)" -->
 
 	
   		<!-- <button id="rotating" 
