--- a/src/app/gs-viewer/toolwindow/groups.component.html
+++ b/src/app/gs-viewer/toolwindow/groups.component.html
@@ -1,3 +1,11 @@
 <div id="groupsview">
-	Groupview
+	<!-- <mat-accordion>
+  	<mat-expansion-panel  *ngFor="let panel of panels">
+    <mat-expansion-panel-header>
+     {{panel.title}}
+    </mat-expansion-panel-header>
+    {{panel.content}}
+  </mat-expansion-panel>
+
+	</mat-accordion> -->
 </div>
