--- a/src/app/gs-viewer/setting/setting.component.css
+++ b/src/app/gs-viewer/setting/setting.component.css
@@ -62,6 +62,21 @@
   width: 60%;
   font-family:sans-serif;
 }
+#linerange{
+  margin-left: 5px;
+  width: 50%;
+  font-family:sans-serif;
+}
+#pointrange{
+  margin-left: 3px;
+  width: 50%;
+  font-family:sans-serif;
+}
+
+#sizerange{
+  width: 50%;
+  font-family:sans-serif;
+}
 
 #centerx{
   width:50px;
