--- a/src/app/gs-viewer/setting/setting.component.css
+++ b/src/app/gs-viewer/setting/setting.component.css
@@ -10,6 +10,7 @@
 #grid{
   margin-left: 20px;
   font-family:sans-serif;
+  margin-top:10px;
 }
 #axis{
   margin-left: 30px;
@@ -21,6 +22,10 @@
 }
 #frame{
   margin-left: 30px;
+  font-family:sans-serif;
+}
+#nomal{
+  margin-left: 20px;
   font-family:sans-serif;
 }
 #huerange{
