--- a/src/app/gs-viewer/toolwindow/groups.component.css
+++ b/src/app/gs-viewer/toolwindow/groups.component.css
@@ -1,3 +1,59 @@
 #groupsview{
   color:black;
 }
+/*::ng-deep .mat-header .mat-expansion-panel-header{
+  background-color:green !important;
+}*/
+.mat-expansion-panel{
+   background-color: #F1F1F1 !important;
+   border-color: #395d73;
+   line-height: 15px;
+   font-weight: bold !important;
+   font-size: 12px !important;
+}
+
+#groupname{
+  margin-right: 0px;
+}
+.mat-header{
+  flex-direction: row;
+  font-family: Roboto,"Helvetica Neue",sans-serif;
+  margin-left: 0px;
+  color:#395d73;
+  border: 0;
+}
+.mat-list-text{
+  cursor :pointer;
+  color:#f3a32a;
+  font-family: sans-serif;
+  font-size: 15px;
+  font-weight: 700px;
+  line-height: 15px;
+  border-top: 2px !important;
+  /*margin-top: 2px;*/
+}
+
+.mat-list-text-parent{
+  cursor :pointer;
+  color:#f3a32a;
+  font-family: sans-serif;
+  font-size: 15px;
+  font-weight: 700px;
+  line-height: 15px;
+  border-top: 2px !important;
+  /*margin-top: 2px;*/
+}
+
+
+hr {
+  display: block;
+  height: 1px;
+  border: 0;
+  border-top: 1px solid #ccc;
+  /*margin: 1em 0;*/
+  padding: 0; 
+  color:#395d73;
+  width: 100%;
+  background-color: #395d73;
+}
+
