--- a/src/app/gs-viewer/viewer/viewer.component.css
+++ b/src/app/gs-viewer/viewer/viewer.component.css
@@ -11,7 +11,9 @@
   position: absolute;
   color:black;
   right: 0px;
+  width: 130px;
   bottom: 0px;
+  color:#395d73;
 }
 /*#rotating{
   width: 30px;
