--- a/src/app/gs-viewer/toolwindow/groups.component.html
+++ b/src/app/gs-viewer/toolwindow/groups.component.html
@@ -2,7 +2,7 @@
 	<mat-accordion>
 	  <mat-expansion-panel *ngFor="let group of groups">
 	  <mat-expansion-panel-header class="mat-header">
-	    <div class="mat-header" ><hr/><label id="groupname">{{group.name}}</label><hr/></div>
+	    <div class="mat-header" ><!-- <hr/> --><label id="groupname">{{group.name}}</label><!-- <hr/> --></div>
 	  </mat-expansion-panel-header>
 	    <div class="mat-list-text-parent"><span id="parent">PARENT : {{group.parent}} </span></div>
 	    <div class="mat-list-text"><hr/><span (click)="selectpoint(group)">POINT : {{group.point}} </span></div>
