--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,35 +1,8 @@
 <div>
-
-  <!-- navigation bar -->
-  <!-- <nav class="toolbar">
-    <div>
-      <ul>
-        <li class="dropdown"><a href="#">File <i class="icon-caret-down"></i><i class="icon-sort"></i></a>
-          <ul class="sub">
-            <li><a href="#" name="importers">Open</a></li>
-            <li><a href="#" name="exporters">Save</a></li>
-            <li><a href="#" name="exporters">Export As ThreeJS</a></li>
-            <li><a href="#" name="importers">Import From CityGML</a></li>
-            <li><a href="#">Exit</a></li>
-          </ul>
-        </li>
-        <li class="dropdown">
-              <a href="#">Wiki<i class="icon-caret-down"></i><i class="icon-sort"></i></a>
-              <ul class="sub">
-              <li><a href="https://github.com/akiajk/gs-JSON">SourceCode</a></li>
-              <li><a href="https://github.com/akiajk/gs-JSON">Tutorial</a></li>
-              </ul>
-        </li>  
-        <li><a href="#">About</a></li>
-        <li><a href="#">Contact</a></li>
-      </ul>
-    </div>
-  </nav>
- -->
-  <input type="file" id="files" name="files[]" (change)="handleFileSelect($event)" />
+  <div id="input-container">
+    <div class="version" style="font-family:sans-serif;"> v.0.0.5</div>
+    <input type="file" id="files" name="files[]" style="font-family:sans-serif;" (change)="handleFileSelect($event)" />
+  </div>
   <!-- gs-viewer demo -->
   <gs-viewer [data]="gs_dummy_data"></gs-viewer>
-
-
-
 </div>
