--- a/src/app/gs-viewer/toolwindow/groups.component.html
+++ b/src/app/gs-viewer/toolwindow/groups.component.html
@@ -34,16 +34,16 @@
 		<button (click)="getcenter()" style="margin-left: 10px">Get</button><br/>
 		<label class="name" >Line Precision</label>
   		<!-- <label id="name" >{{linepre.value.toPrecision(2)}}</label> -->
-  		<input type="text" value={{_linepre}} #linetext (change)="changeline(linetext.value)" style="width: 30px; "><mat-slider class="slider" name="range" id="linerange" min=0 max=1 step=0.01  value={{_linepre}} #linepre (change)="changeline(linepre.value)" ></mat-slider><br/>
-  		<label class="name" >Points Size</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  		<input type="text" value={{_pointsize}} #pointtext (change)="changepointsize(pointtext.value)" style="width: 30px; "><mat-slider class="slider" name="range" id="sizerange" min=0 max=5 step=0.1  value={{_pointsize}} #pointsize (change)="changepointsize(pointsize.value)" ></mat-slider><br/>
+  		<input type="text" value={{_linepre}} #linetext (change)="changeline(linetext.value)" style="width: 30px; "><mat-slider class="slider" name="range" id="linerange" min=0 max=1 step=0.01  value={{_linepre}} #linepre (change)="changeline(linepre.value.toPrecision(2))" ></mat-slider><br/>
+  		<label class="name" >Points Size</label>&nbsp;&nbsp;&nbsp;&nbsp;
+  		<input type="text" value={{_pointsize}} #pointtext (change)="changepointsize(pointtext.value)" style="width: 30px; "><mat-slider class="slider" name="range" id="sizerange" min=0 max=5 step=0.1  value={{_pointsize}} #pointsize (change)="changepointsize(pointsize.value.toPrecision(2))" ></mat-slider><br/>
   		<hr/><label class="name" >Hemisphere Light</label>&nbsp;&nbsp;<br/>
 		<label class="name" >hue</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-		<mat-slider class="slider" name="range" id="huerange" min=0 max=1 step=0.01  value={{hue}} #slider (change)="changelight(slider.value,slider1.value,slider2.value)" ></mat-slider><label id="name" >{{slider.value.toPrecision(2)}}</label><br/>
+		<input type="text" value={{hue}} #huetext (change)="changelight(huetext.value,slider1.value,slider2.value)" style="width: 30px; "><mat-slider class="slider" name="range" id="huerange" min=0 max=1 step=0.01  value={{hue}} #slider (change)="changelight(slider.value,slider1.value,slider2.value)" ></mat-slider><br/>
 		<label class="name" >saturation</label>
-		<mat-slider name="range" id="satrange" min=0 max=1 step=0.01 value={{saturation}} #slider1 (change)="changelight(slider.value,slider1.value,slider2.value)" ></mat-slider><label id="name" >{{slider1.value.toPrecision(2)}}</label><br/>
+		<input type="text" value={{saturation}} #satutext (change)="changelight(slider.value,satutext.value,slider2.value)" style="width: 30px; "><mat-slider name="range" id="satrange" min=0 max=1 step=0.01 value={{saturation}} #slider1 (change)="changelight(slider.value,slider1.value,slider2.value)" ></mat-slider><br/>
 		<label class="name" >lightness</label>&nbsp;
-		<mat-slider name="range" id="lirange" min=0 max=1 step=0.01 value={{lightness}} #slider2 (change)="changelight(slider.value,slider1.value,slider2.value)" ></mat-slider><label id="name" >{{slider2.value.toPrecision(2)}}</label><br/>
+		<input type="text" value={{lightness}} #lighttext (change)="changelight(slider.value,slider1.value,lighttext.value)" style="width: 30px; "><mat-slider name="range" id="lirange" min=0 max=1 step=0.01 value={{lightness}} #slider2 (change)="changelight(slider.value,slider1.value,slider2.value)" ></mat-slider><br/>
   	</div>
   </mat-tab>
 </mat-tab-group>
