--- a/src/app/gs-viewer/viewer/viewer.component.html
+++ b/src/app/gs-viewer/viewer/viewer.component.html
@@ -38,17 +38,13 @@
       <button id="selecting" [class.selected]="seVisible" (click)= "select(seVisible)" ><i class="fa fa-mouse-pointer"></i></button>
       <div id="shownumber">
         <tr>
-        <td  align=left width="60%">Triangles</td>
-        <td  align=center width="40%">{{renderer.info.render.faces}}</td>
+        <td  align=left style="width: 60px;">Triangles&nbsp;&nbsp;</td>
+        <td  align=left style="width: 10px;">{{renderer.info.render.faces}}</td>
         </tr>
         <tr>
-        <td  align=left width="60%" >Lines</td>
-        <td  align=center width="40%">{{LineNo}}</td>
+        <td  align=left style="width: 60px;">Lines</td>
+        <td  align=left style="width: 10px;">{{LineNo}}</td>
         </tr>
-        <!-- <tr>
-        <td  align=center width="50%">Vertices</td>
-        <td  align=center width="40%">{{renderer.info.render.vertices}}</td>
-        </tr> -->
       </div>
 
       	
