--- a/src/app/gs-viewer/viewer/viewer.component.html
+++ b/src/app/gs-viewer/viewer/viewer.component.html
@@ -4,6 +4,10 @@
     (mouseup)="mouseup($event)"
 		(click)="onDocumentMouseDown($event)">
 
+
+    <!-- (mousemove)="requestanimate()" 
+    (click)="requestanimate()" -->
+
     <!-- (window:resize)="onResize($event)" -->
 
 	
