--- a/src/app/gs-viewer/viewer/viewer.component.html
+++ b/src/app/gs-viewer/viewer/viewer.component.html
@@ -2,6 +2,7 @@
     (mousemove)="onDocumentMouseMove($event)" 
     (mousedown)="mousedown($event)"
     (mouseup)="mouseup($event)"
+    (click)="render(this)"
 		(click)="onDocumentMouseDown($event)">
 
 
