--- a/src/app/gs-viewer/gs-viewer.component.html
+++ b/src/app/gs-viewer/gs-viewer.component.html
@@ -3,7 +3,7 @@
 		<split-area [size]="90" id="splitcontainer">
 		  <div style="height: 100%">
 		    <split direction="horizontal">
-		      <split-area [size]="0.5" id="splitgroups" >
+		      <split-area [size]="0.5" id="splitgroups" style="overflow-x:hidden;overflow-y: auto;">
 		        <app-groups></app-groups>
 		      </split-area>
 		      <split-area [size]="99.5" id="splitviewer">
