--- a/src/app/gs-viewer/toolwindow/groups.component.css
+++ b/src/app/gs-viewer/toolwindow/groups.component.css
@@ -52,6 +52,7 @@
   margin-left:9px;
 }
 .name{
+  width: 10px;
   margin-left: 10px;
 }
 
@@ -71,8 +72,12 @@
   margin: 0px !important;
   overflow: hidden !important;
 }
+/deep/ .mat-slider {
+  height: 25px !important;
+  vertical-align: unset !important;
+}
 
-.mat-expansion-panel{
+/*.mat-expansion-panel{
    background-color: #F1F1F1 !important;
    border-color: #395d73;
    line-height: 14px;
@@ -80,16 +85,9 @@
    font-size: 12px !important;
 }
 .mat-tab-group{
-/*background-color: #F1F1F1 !important;
-  border-color: #395d73;
-  line-height: 14px;
-  font-weight: bold !important;
-  font-size: 12px !important;
-  color:#395d73;
-  border: 0;*/
   border: 0px solid #F1F1F1;
   color:#395d73;
-}
+}*/
 
 /deep/.mat-tab-label, /deep/.mat-tab-label-active{
   min-width: 3px!important;
