--- a/src/app/gs-viewer/toolwindow/groups.component.html
+++ b/src/app/gs-viewer/toolwindow/groups.component.html
@@ -30,16 +30,16 @@
 		<label class="name" >XYZ</label><input type="text" name="center" id="centerx" #centerx value={{_centerx}} (change)=changecenter(centerx.value,centery.value,centerz.value)><input type="text" name="center" #centery id="centery" value={{_centery}} (change)=changecenter(centerx.value,centery.value,centerz.value)><input type="text" name="center"  #centerz id="centerz" value={{_centerz}} (change)=changecenter(centerx.value,centery.value,centerz.value)><br/>
 		<label class="name" >Size</label><input type="text" name="center"  #size id="centersize" value={{_centersize}} (change)=changecentersize(size.value)><br/>
 		<hr/><label class="name" >Precision</label><br/>
-  		<label class="name" >Line</label>&nbsp;&nbsp;&nbsp;&nbsp;<input type="text" value={{_linepre}} #linetext (change)="changeline(linetext.value)" style="width: 30px; "><mat-slider class="slider" name="range" id="linerange" min=0 max=1 step=0.01  value={{_linepre}} #linepre (change)="changeline(linepre.value.toPrecision(2))" ></mat-slider><br/><hr/>
+  		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<label class="name" >Line</label>&nbsp;<input type="text" value={{_linepre}} #linetext (change)="changeline(linetext.value)" style="width: 30px; "><mat-slider class="slider" name="range" id="linerange" min=0 max=1 step=0.01  value={{_linepre}} #linepre (change)="changeline(linepre.value.toPrecision(2))" ></mat-slider><br/><hr/>
   		<label class="name" >Points Size</label><br/>
-  		<label class="name" >Selected</label>&nbsp;&nbsp;&nbsp;&nbsp;<input type="text" value={{_pointsize}} #pointtext (change)="changepointsize(pointtext.value)" style="width: 30px; "><mat-slider class="slider" name="range" id="sizerange" min=0 max=5 step=0.1  value={{_pointsize}} #pointsize (change)="changepointsize(pointsize.value.toPrecision(2))" ></mat-slider><br/>
-  		<label class="name" >Unelected</label>&nbsp;&nbsp;<input type="text" value=0  style="width: 30px; "><mat-slider class="slider" name="range" id="sizerange" min=0 max=5 step=0.1  value=0 #pointsize1  ></mat-slider><br/>
+  		&nbsp;&nbsp;&nbsp;&nbsp;<label class="name" >Selected</label>&nbsp;<input type="text" value={{_pointsize}} #pointtext (change)="changepointsize(pointtext.value)" style="width: 30px; "><mat-slider class="slider" name="range" id="sizerange" min=0 max=5 step=0.1  value={{_pointsize}} #pointsize (change)="changepointsize(pointsize.value.toPrecision(2))" ></mat-slider><br/>
+  		<label class="name" >Unselected</label>&nbsp;<input type="text" value=0  style="width: 30px; "><mat-slider class="slider" name="range" id="sizerange" min=0 max=5 step=0.1  value=0 #pointsize1  ></mat-slider><br/>
   		<hr/><label class="name" >Hemisphere Light</label>&nbsp;&nbsp;<br/>
-		<label class="name" >hue</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<label class="name" >Hue</label>&nbsp;
 		<input type="text" value={{hue}} #huetext (change)="changelight(huetext.value,slider1.value,slider2.value)" style="width: 30px; "><mat-slider class="slider" name="range" id="huerange" min=0 max=1 step=0.01  value={{hue}} #slider (change)="changelight(slider.value,slider1.value,slider2.value)" ></mat-slider><br/>
-		<label class="name" >saturation</label>
+		&nbsp;<label class="name" >Saturation</label>&nbsp;
 		<input type="text" value={{saturation}} #satutext (change)="changelight(slider.value,satutext.value,slider2.value)" style="width: 30px; "><mat-slider name="range" id="satrange" min=0 max=1 step=0.01 value={{saturation}} #slider1 (change)="changelight(slider.value,slider1.value,slider2.value)" ></mat-slider><br/>
-		<label class="name" >lightness</label>&nbsp;
+		&nbsp;&nbsp;<label class="name" >Lightness</label>&nbsp;
 		<input type="text" value={{lightness}} #lighttext (change)="changelight(slider.value,slider1.value,lighttext.value)" style="width: 30px; "><mat-slider name="range" id="lirange" min=0 max=1 step=0.01 value={{lightness}} #slider2 (change)="changelight(slider.value,slider1.value,slider2.value)" ></mat-slider><br/>
   	</div>
   </mat-tab>
