--- a/src/app/gs-viewer/toolwindow/toolwindow.component.css
+++ b/src/app/gs-viewer/toolwindow/toolwindow.component.css
@@ -2,9 +2,10 @@
   background-color:white;
   overflow-x: scroll !important;
   font-family:sans-serif;
+  width: 100%;
 }
 #toolbar{
-  background-color: #E6E6E6;
+  background-color: #E6E6E6 !important;
   float: left;
   width: 50%;
   height: 25px;
@@ -22,9 +23,15 @@
   overflow:hidden; 
   white-space:nowrap; 
 }
-/*#toolview{
-  overflow-x: scroll;
-}*/
+#toolview{
+  width: 100%;
+  float: left;
+}
+
+#selectedname{
+  font-size: 12px;
+  vertical-align: middle;
+}
 #point{
   margin-left:25px;
   font-size:15px;
@@ -32,6 +39,7 @@
   border:0;
   font-family:sans-serif;
 }
+
 #vertice{
   font-size:15px;
   background-color:transparent;
